test_output.txt

BSTTests.hs:129:10: error: [GHC-88464]
    Variable not in scope:
      rotateLeft :: BST key22 String -> BST key23 String
    |
129 |         (rotateLeft (insert 20 "twenty" (insert 10 "ten" empty))))
    |          ^^^^^^^^^^
